# plain-rag

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  ruff.toml
.trae/rules/: project_rules.md
.windsurf/rules/: fastapi-style-guide.md
app/: main.py
app/api/: endpoints.py
app/core/: config.py  exception.py  interfaces.py  registry.py  utils.py
app/schemas/: enums.py  models.py
app/services/: config_service.py  embedding_providers.py  rag_service.py  rag_service_v1.py  rerankers.py  vector_stores.py
scripts/: create_tables.py
