[project]
name = "chat-hub"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115.13",
    "litellm>=1.73.0",
    "pydantic-settings>=2.10.0",
    "structlog>=25.4.0",
    "transformers>=4.52.4",
    "uvicorn>=0.34.3",
]
